# Pangolengine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSES.md  README.md
.github/workflows/: build.yml  web-build.yml
assets/info/: player_anims.json
assets/maps/: level1.tmj  level2.tmj
assets/scenes/: S001_Test.json
assets/tilesets/: Objects.tsx  SpritesheetBuilding.tsx  TilemapOutdoor.tsx  TilesetIndoor.tsx
examples/demo/: DemoGame.cpp  DemoGame.h  main.cpp
examples/demo/assets/scenes/: S001_Test.json
examples/demo/scripts/: get_dialogue_files.py
include/: Pangolengine.h
scripts/: get_dialogue_files.py
src/: Camera.cpp  Camera.h  Collision.cpp  Collision.h  Constants.h  Engine.cpp  Engine.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  IGame.h  JsonParser.cpp  JsonParser.h  Map.cpp  Map.h  MapLoader.cpp  MapLoader.h  Parser.h  TextureManager.cpp  TextureManager.h  Tokeniser.cpp  Tokeniser.h  TsxParser.cpp  TsxParser.h  Vector2D.cpp  Vector2D.h  main.cpp
src/Components/: Animation.h  Collider.h  Components.h  Dialogue.h  ECS.h  Interactable.h  KeyboardController.h  Map.h  MouseController.h  Sprite.h  Transform.h  Transition.h
src/Parsers/: JsonParser.cpp  TsxParser.cpp  TsxParser.h
src/UI/: Component.h  DialoguePanel.h  DialogueResponsePanel.h  DialogueResponseText.h  DialogueText.h  Grid.h  IComponent.h  IUIComponent.h  IUIManager.h  Manager.h  Options.h  Panel.h  PanelHelper.h  PortraitPanel.h  Text.h  UIComponents.h  UIHelper.h  UIManager.h
